fix main nav misalignment and craft intro

--- a/css/internal.css
+++ b/css/internal.css
@@ -20,7 +20,6 @@ div.intro h1 {
 }
 div.intro p {
   color: #1d1c18;
-  width: 70%;
   margin-top: -25px;
   min-width: 675px;
 }
