--- a/css/main.css
+++ b/css/main.css
@@ -183,7 +183,7 @@ div#top-nav a:hover {
   text-decoration: underline;
 }
 div#main-nav {
-  margin: 7em 1em 0 0;
+  margin: 7em -2em 0 0;
 }
 div#main-nav a {
   font-size: 1.7em;
